refactor gateway and openapi
